--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,14 +1,3 @@
-.navbar {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 200px;
-    height: 100%;
-    background-color: #f0f0f0;
-    padding: 20px;
-}
-
-/* Style for the navbar */
 .Navbar-left {
     display: inline;
     position: fixed;
@@ -16,14 +5,14 @@
     width: 60px;
     height: 100%;
     background-color: #003059;
+    margin: 0;
+    padding: 0;
 }
-
-/* Style for the navbar links */
 .Navbar-left a {
-    display: block; /* Display each link as a block element */
-    padding: 12px 16px; /* Add some padding */
-    text-decoration: none; /* Remove underline */
-    color: #333; /* Set link color */
+    display: block;
+    padding: 12px 16px;
+    text-decoration: none;
+    color: #333;
 }
 
 .nav-item {
@@ -31,10 +20,6 @@
     margin-bottom: 10px;
 }
 
-.nav-item a {
-    text-decoration: none;
-    color: white;
-}
 .logo {
     filter: invert(100%);
     height: 70%;
@@ -44,7 +29,6 @@
     display: block;
     padding: 0.2rem 0.5rem;
     text-decoration: none;
-    font-weight: bold;
     border-radius: 10px;
     transition: background-color 0.3s ease;
 }
