validations added for Register Page

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -46,8 +46,7 @@ label {
     margin-bottom: 8px;
     font-size: medium;
     font-weight: 500;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-        'Lucida Sans', Arial, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 .text {
