--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -21,6 +21,12 @@
     display: flex;
     flex-direction: column;
 }
+.input-elements>label{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.input-elements>input{
+    border-radius: 10px;
+}
 .register-button {
     background-color: #4caf50;
     color: white;
@@ -46,9 +52,24 @@
     padding: 8px;
     margin-bottom: 8px;
 }
-.register form h2 {
+.confirm-password{
+    padding: 8px;
+    margin-bottom: 8px;
+}
+.register-form h2 {
     text-align: center;
     font-weight: 600;
     margin-bottom: 10px;
-    font-size: large;
+    font-size: 25px;
+}
+.info{
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+}
+.error{
+    font-size: 1em;
+    font-style: italic;
+    font-weight: 500;
+    
 }
