--- a/src/pages/Register-step1/Register.css
+++ b/src/pages/Register-step1/Register.css
@@ -4,7 +4,7 @@
     justify-content: center;
     width: 100vw;
     height: 100vh;
-    background-image: url('../../../public/Home-2.png');
+    background-image: url('../../../public/Home.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -21,10 +21,10 @@
     display: flex;
     flex-direction: column;
 }
-.input-elements>label{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.input-elements > label {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.input-elements>input{
+.input-elements > input {
     border-radius: 10px;
 }
 .register-button {
@@ -52,7 +52,7 @@
     padding: 8px;
     margin-bottom: 8px;
 }
-.confirm-password{
+.confirm-password {
     padding: 8px;
     margin-bottom: 8px;
 }
@@ -62,14 +62,13 @@
     margin-bottom: 10px;
     font-size: 25px;
 }
-.info{
+.info {
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
 }
-.error{
+.error {
     font-size: 1em;
     font-style: italic;
     font-weight: 500;
-    
 }
