--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -43,3 +43,40 @@
     align-self: flex-end;
     justify-self: flex-end;
 }
+
+@media (max-width:768px) {
+    .Navbar-left{
+        display: inline;
+        position:fixed;
+        width: 100%;
+        height: 60px;
+        margin: 0;
+        padding: 0;
+    }
+    .nav{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    .Navbar-left a {
+        display: inline-block;
+        padding: 12px 16px;
+        text-decoration: none;
+        color: #333;
+    }
+    .logo {
+        filter: invert(100%);
+        height: 70%;
+        width: 20px;
+    }
+    .nav-item-log {
+        align-self: flex-end;
+        justify-self: flex-end;
+    }
+    .navlink {
+        padding: 0.2rem 0.5rem;
+        text-decoration: none;
+        border-radius: 10px;
+        transition: background-color 0.3s ease;
+    }
+}
