--- a/src/pages/Home/Homeindex.css
+++ b/src/pages/Home/Homeindex.css
@@ -40,6 +40,7 @@
     font-size: 0.875rem;
 }
 .action-buttons {
+    width: 300px;
     display: flex;
     align-items: center;
     margin-bottom: 10px 20px;
