--- a/src/pages/Register-step1/Register.css
+++ b/src/pages/Register-step1/Register.css
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: column;
     padding: 50px;
+    height: 100%;
 }
 
 .input-elements {
@@ -71,4 +72,10 @@
     font-size: 1em;
     font-style: italic;
     font-weight: 500;
+}
+
+@media (max-width:768px){
+    .register-form{
+        margin-top: 80px;
+    }
 }
