--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -29,6 +29,15 @@
     height: 70%;
     width: 70%;
 }
+.bar{
+    margin-top: 10px;
+    margin-left: 18px;
+}
+.bar>i{
+    display: none;
+    color: white;
+    
+}
 .navlink {
     padding: 0.2rem 0.5rem;
     text-decoration: none;
@@ -43,6 +52,12 @@
     align-self: flex-end;
     justify-self: flex-end;
 }
+.close{
+    color: white;
+    float: right;
+    margin-top: 10px;
+    display: none;
+}
 
 @media (max-width:768px) {
     .Navbar-left{
@@ -54,10 +69,21 @@
         padding: 0;
     }
     .nav{
+        margin-top: 60px;
+        display: none;
+    }
+    .nav.active{
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
     }
+    .close.active{
+        display: block;
+        margin-right: 30px;
+    }
+    .Navbar-left.active {
+        height: 250px;
+      }
     .Navbar-left a {
         display: inline-block;
         padding: 12px 16px;
@@ -68,6 +94,16 @@
         filter: invert(100%);
         height: 70%;
         width: 20px;
+    }
+    .bar>i{
+        display: block;
+        margin-top: 20px;
+        float: right;
+        margin-right: 20px;
+        cursor: pointer;
+    }
+    .bar.active{
+        display: none;
     }
     .nav-item-log {
         align-self: flex-end;
