--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,7 @@
     background-color: #003059;
     margin: 0;
     padding: 0;
+    transition: height 0.3s ease;
 }
 .Navbar-left a {
     display: block;
@@ -73,17 +74,17 @@
         display: none;
     }
     .nav.active{
+        height: auto;
         display: flex;
         flex-direction: column;
         align-items: center;
+        background-color: #003059;
     }
     .close.active{
         display: block;
-        margin-right: 30px;
+        margin-top: 20px;
+        margin-right: 25px;
     }
-    .Navbar-left.active {
-        height: 250px;
-      }
     .Navbar-left a {
         display: inline-block;
         padding: 12px 16px;
