--- a/src/pages/Browse/Browse.css
+++ b/src/pages/Browse/Browse.css
@@ -165,3 +165,55 @@
 .dropdown-menu a:hover {
   background-color: #f4f4f4;
 }
+
+.projects-empty{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.para{
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.dot-list{
+  list-style-type: disc;
+  margin-bottom: 10px;
+}
+.projects-img{
+  width: 20px;
+  height: 20px;
+  display: inline;
+  margin-right: 10px;
+}
+NavLink{
+  color: blue;
+}
+.content-table{
+     border-collapse: collapse;
+     margin: 25px 0;
+     min-width:200px;
+     border-radius: 5px 5px 0 0;
+     overflow: hidden;
+     box-shadow: 0 0 20px rgba(0,0,0,0.15);
+     text-align:center;
+}
+.content-table thead tr {
+  background-color: #526D82;
+  color:#27374D;
+  text-align:left;
+  font-weight: bold;
+}
+
+.content-table th,.content-table td{
+     padding: 10px 15px;
+}
+.content-table tbody tr{
+  border-bottom: 1px solid #dddddd;
+}
+.content-table tbody tr:nth-of-type(even){
+  background-color: #f3f3f3;
+}
+.content-table tbody tr:last-of-type{
+     border-bottom: 2px solid  #526D82
+}
