--- a/src/pages/Browse/Browse.css
+++ b/src/pages/Browse/Browse.css
@@ -15,6 +15,42 @@
   overflow: auto; 
   height: 100vh;
 }
+.forms{
+  display: block;
+  background-color:#ddd;
+  border-radius: 5px 5px 0 0;
+  min-width: 20px;
+  min-height: 150px;
+  padding: 20px;
+}
+form label{
+  
+  margin-bottom: 20px;
+  flex-direction: column;
+}
+
+form button{
+  margin-top: 30px;
+  height: 30px;
+  width: 70px;
+  align-items: center;
+  margin-left: 20px;
+  background-color:grey;
+  margin-left: 10px;
+}
+
+form input{
+  margin-top: 5px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.ok{
+  height: 30px;
+  width: 70px;
+  margin-left: 25px;
+  background-color:grey;
+}
 
 .browse-sidebar ul {
   list-style-type:none;
