--- a/src/pages/Browse/Browse.css
+++ b/src/pages/Browse/Browse.css
@@ -66,8 +66,8 @@
   
 }
 
-.browse-content.no-item-selected {
-  display: flex;
+.browse-content.No-item-selected {
+  display:flex;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -164,4 +164,70 @@
 
 .dropdown-menu a:hover {
   background-color: #f4f4f4;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+th,
+td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ccc;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+
+input[type='text'],
+input[type='password'],
+input[type='email'] {
+  margin-bottom: 10px;
+  padding: 5px;
+  width: 200px;
+}
+
+button {
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+.actions-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.actions-button button {
+  margin-right: 5px;
+}
+
+.add-row-button {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.add-row-button:hover {
+  background-color: #0056b3;
+}
+
+.edit-button {
+  background-color: #ffc107;
+  color: #000;
 }
