--- a/src/pages/Browse/Browse.css
+++ b/src/pages/Browse/Browse.css
@@ -16,52 +16,63 @@
   height: 100vh;
 }
 .forms{
-  height: 200px;
-  width: 300px;
+  height: 450px;
+  width: 350px;
   /* display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center; */
   position: absolute;
-  left: 50%;
-  top: 250px;
-  background-color:#ddd;
-  border-radius: 5px 5px 0 0;
-  min-width: 20px;
-  min-height: 150px;
-  padding: 20px;
+  left: 45%;
+  top: 120px;
+  background-color:#f2f2f2;
+  border-radius: 5px;
+  border:1px solid lightgray;
+  padding: 20px 20px 20px 20px;
   visibility: hidden;
 }
 .forms.active{
   visibility: visible;
 }
 form label{
-  
+  margin-top: 10px;
   margin-bottom: 20px;
   flex-direction: column;
+  font-weight: 450;
 }
 
-form button{
-  margin-top: 30px;
-  height: 30px;
-  width: 70px;
-  align-items: center;
-  margin-left: 20px;
-  background-color:grey;
-  margin-left: 10px;
-}
+
 
 form input{
   margin-top: 5px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: column;
+  width:100%;
+  padding: 4px;
+  border-radius: 5px;
+  border:1px solid #ccc;
 }
 .ok{
   height: 30px;
-  width: 70px;
-  margin-left: 25px;
-  background-color:grey;
+  width: 65px;
+  margin-left: 98px;
+  background-color:#4d72ae;
+  color: whitesmoke;
+  border-radius: 4px;
+  margin-top: 10px;
+  border: none;
+  cursor: pointer;
+}
+.cancel{
+ margin-left: 60px;
+ height: 30px;
+ width: 65px;
+ border-radius: 4px;
+ background-color:rgba(234, 6, 6, 0.762);
+ color:white;
+ border: none;
+ cursor: pointer;
 }
 
 .browse-sidebar ul {
