--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,6 +9,7 @@
     padding: 0;
     transition: height 0.3s ease;
 }
+
 .Navbar-left a {
     display: block;
     padding: 12px 16px;
@@ -20,6 +21,7 @@
     list-style-type: none;
     margin-bottom: 10px;
 }
+
 .nav {
     display: flex;
     flex-direction: column;
@@ -30,15 +32,17 @@
     height: 70%;
     width: 70%;
 }
-.bar{
+
+.bar {
     margin-top: 10px;
     margin-left: 18px;
 }
-.bar>i{
+
+.bar>i {
     display: none;
     color: white;
-    
 }
+
 .navlink {
     padding: 0.2rem 0.5rem;
     text-decoration: none;
@@ -49,38 +53,79 @@
 .navlink:hover {
     background-color: #c3c1c1;
 }
+
 .nav-item-log {
     align-self: flex-end;
     justify-self: flex-end;
 }
-.close{
+
+.close {
     color: white;
     float: right;
     margin-top: 10px;
     display: none;
 }
 
-@media (max-width:768px) {
-    .Navbar-left{
+.avatar-container {
+    position: relative;
+}
+
+.avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.avatar-options {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    padding: 8px 12px;
+    z-index: 10;
+    display: none;
+}
+
+.avatar-container:hover .avatar-options {
+    display: block;
+}
+
+.avatar-option {
+    display: block;
+    text-decoration: none;
+    color: #333;
+    padding: 4px 8px;
+}
+
+.profile-info {
+    color: #fff;
+}
+
+@media (max-width: 768px) {
+    .Navbar-left {
         display: inline;
-        position:fixed;
+        position: fixed;
         width: 100%;
         height: 60px;
         margin: 0;
         padding: 0;
     }
-    .nav{
+    .nav {
         margin-top: 60px;
         display: none;
     }
-    .nav.active{
+    .nav.active {
         height: auto;
         display: flex;
         flex-direction: column;
         align-items: center;
         background-color: #003059;
     }
-    .close.active{
+    .close.active {
         display: block;
         margin-top: 20px;
         margin-right: 25px;
@@ -96,14 +141,14 @@
         height: 70%;
         width: 20px;
     }
-    .bar>i{
+    .bar>i {
         display: block;
         margin-top: 20px;
         float: right;
         margin-right: 20px;
         cursor: pointer;
     }
-    .bar.active{
+    .bar.active {
         display: none;
     }
     .nav-item-log {
@@ -117,11 +162,12 @@
         transition: background-color 0.3s ease;
     }
 }
+
 .Navbar-left .nav .navlink {
     position: relative;
-  }
-  
-  .Navbar-left .nav .navlink .icon-name {
+}
+
+.Navbar-left .nav .navlink .icon-name {
     height: 30px;
     width: 90px;
     text-align: center;
@@ -136,9 +182,9 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity 1s ease, visibility 0.3s ease;
-  }
+}
 
-  .Navbar-left .nav .navlink .icon-name:before {
+.Navbar-left .nav .navlink .icon-name:before {
     content: '';
     position: absolute;
     top: 10px;
@@ -147,11 +193,9 @@
     height: 10px;
     background-color: gray;
     transform: rotate(-45deg);
+}
 
-  }
-  
-  .Navbar-left .nav .navlink:hover .icon-name {
+.Navbar-left .nav .navlink:hover .icon-name {
     opacity: 1;
     visibility: visible;
-  }
-  
+}
