--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -67,22 +67,27 @@
 }
 
 .avatar-container {
-    position: relative;
+    position: absolute;
+    display: inline-block;
+    left: 0;
+    bottom: 0;
+    margin-bottom: 30px;
+    margin-left: 10px;
 }
 
 .avatar {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
     cursor: pointer;
 }
 
 .avatar-options {
     position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: #fff;
+    top: auto;
+    bottom: 100%;
+    left: calc(100% + 10px);
+    background-color: #c3c1c1;
     border-radius: 4px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
     padding: 8px 12px;
@@ -97,7 +102,7 @@
 .avatar-option {
     display: block;
     text-decoration: none;
-    color: #333;
+    color: #fff;
     padding: 4px 8px;
 }
 
