--- a/src/pages/Browse/Browse.css
+++ b/src/pages/Browse/Browse.css
@@ -205,8 +205,9 @@ button:hover {
 }
 .actions-button {
   display: flex;
-  justify-content: space-between;
+  justify-content:space-around;
   align-items: center;
+
 }
 
 .actions-button button {
