--- a/src/pages/Browse/Browse.css
+++ b/src/pages/Browse/Browse.css
@@ -34,7 +34,7 @@
 .forms.active{
   visibility: visible;
 }
-form label{
+.forms>label{
   margin-top: 10px;
   margin-bottom: 20px;
   flex-direction: column;
@@ -43,7 +43,7 @@ form label{
 
 
 
-form input{
+.forms>input{
   margin-top: 5px;
   margin-bottom: 10px;
   display: flex;
