--- a/src/pages/Register-step1/Register.css
+++ b/src/pages/Register-step1/Register.css
@@ -17,9 +17,13 @@
 }
 .input-elements > label {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 450;
 }
 .input-elements > input {
     border-radius: 10px;
+}
+.register-form{
+    width: 420px;
 }
 .company-name,
 .company-state,
@@ -28,8 +32,9 @@
 .company-country,
 .company-phone,
 .company-email {
-    padding: 8px;
+    padding: 4px;
     margin-bottom: 8px;
+    font-size: 14px;
 }
 
 @media (max-width: 768px) {
