--- a/src/pages/Browse/Users.css
+++ b/src/pages/Browse/Users.css
@@ -15,9 +15,7 @@ th {
   background-color: #f2f2f2;
 }
 
-
 input[type='text'],
-input[type='password'],
 input[type='email'] {
   margin-bottom: 10px;
   padding: 5px;
@@ -36,32 +34,130 @@ button {
 button:hover {
   background-color: #0056b3;
 }
-.actions-button {
+.action-icons {
   display: flex;
-  justify-content:space-around;
   align-items: center;
-
 }
 
-.actions-button button {
-  margin-right: 5px;
+.action-icons button {
+  margin-right: 4px; 
 }
-
-.add-row-button {
-  margin-top: 10px;
-  padding: 5px 10px;
-  background-color: #007bff;
-  color: #fff;
+.edit-button{
+  background: none;
   border: none;
-  border-radius: 3px;
   cursor: pointer;
+  outline: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+   position: relative;
+}
+.edit-button img {
+  width: 30px; 
+  height: 20px; 
+  margin-right: 5px; 
+}
+.edit-button:hover {
+  color:#ccc;
+}
+.edit-icon.blink{
+  animation: blink-animation 1s infinite;
+}
+@keyframes blink-animation {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.edit-button .tooltip {
+  visibility: hidden;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 4px 8px;
+  border-radius: 4px;
+  position: absolute;
+  bottom: 125%;
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+}
+.edit-button:hover .tooltip {
+  visibility: visible;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 80px;
+  height: 24px;
+  margin-right: 10px;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  border-radius: 24px;
+  transition: background-color 0.2s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  bottom: 2px;
+  background-color: white;
+  border-radius: 50%;
+  transition: transform 0.2s;
+   left: 2px; 
+  bottom: 2px; 
+}
+input:checked + .slider {
+  background-color: #5db85b;
+}
+input:checked + .slider:before {
+  left :auto;
+  right:2px;
+}
+.slider.round {
+  border-radius: 24px;
+}
+.slider.round:before {
+  border-radius: 50%;
+}
+.switch label.activate {
+  position: absolute;
+  top: 0;
+transform: translateY(-50%);
+  bottom: 0;
+  display: flex;
+  right: calc(100% + 8px);
+  align-items: center;
+  padding-left: 8px; 
+  justify-content: flex-start; 
+  color: #000; 
+}
+.switch label.deactivate {
+  position: absolute;
+  top: 0;
+  right: 0; 
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; 
+  color: #000; 
 }
 
-.add-row-button:hover {
-  background-color: #0056b3;
-}
-
-.edit-button {
-  background-color: #ffc107;
-  color: #000;
-}
