--- a/src/pages/Browse/Users.css
+++ b/src/pages/Browse/Users.css
@@ -54,7 +54,7 @@ button:hover {
 }
 .edit-button img {
   width: 30px; 
-  height: 20px; 
+  height: 24px; 
   margin-right: 5px; 
 }
 .edit-button:hover {
@@ -91,16 +91,19 @@ button:hover {
   visibility: visible;
 }
 .switch {
+  
   position: relative;
-  display: inline-block;
-  width: 80px;
-  height: 24px;
+  display: inline-flex; 
+  width: 90px;
+  height: 25px;
   margin-right: 10px;
+  align-items: center; 
 }
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
+   position: absolute;
 }
 .slider {
   position: absolute;
@@ -112,7 +115,7 @@ button:hover {
   border-radius: 24px;
   transition: background-color 0.2s;
 }
-.slider:before {
+.switch .slider:before {
   position: absolute;
   content: "";
   height: 20px;
@@ -121,43 +124,46 @@ button:hover {
   background-color: white;
   border-radius: 50%;
   transition: transform 0.2s;
-   left: 2px; 
-  bottom: 2px; 
+  left: 2px;
+  bottom: 2px;
 }
-input:checked + .slider {
+.switch input:checked + .slider {
   background-color: #5db85b;
 }
-input:checked + .slider:before {
-  left :auto;
-  right:2px;
+
+.switch input:checked + .slider:before {
+  left: auto;
+  right: 2px;
 }
-.slider.round {
+
+.switch .slider.round {
   border-radius: 24px;
 }
-.slider.round:before {
+
+.switch .slider.round:before {
   border-radius: 50%;
 }
-.switch label.activate {
+
+.switch .label {
   position: absolute;
-  top: 0;
-transform: translateY(-50%);
-  bottom: 0;
-  display: flex;
-  right: calc(100% + 8px);
-  align-items: center;
-  padding-left: 8px; 
-  justify-content: flex-start; 
-  color: #000; 
+  top: 50%;
+  transform: translateY(-50%);
+  color: #000;
 }
-.switch label.deactivate {
-  position: absolute;
-  top: 0;
-  right: 0; 
-  bottom: 0;
-  left: 0;
+
+.switch .label.activate {
+  left: 20px;
   display: flex;
   align-items: center;
-  justify-content: flex-start; 
-  color: #000; 
+  justify-content: flex-start;
 }
+
+.switch .label.deactivate {
+  right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+
 
