--- a/src/pages/ProjectDashboard/ProjectDashboard.css
+++ b/src/pages/ProjectDashboard/ProjectDashboard.css
@@ -49,3 +49,19 @@
     width: 15px;
     transform: rotate(90deg);
 }
+
+.create-reqSet-button{
+    border: 1px solid #007bff;
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px;
+    margin-top: 30px;
+    margin-left: 30px;
+    border-radius: 5px;
+}
+
+.reqform-set{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
