--- a/src/pages/ProjectDashboard/ProjectDashboard.css
+++ b/src/pages/ProjectDashboard/ProjectDashboard.css
@@ -49,3 +49,12 @@
     width: 15px;
     transform: rotate(90deg);
 }
+.icons {
+    height: 20px;
+    width: 20px;
+}
+.selected-set {
+    background-color: #a5c0dd;
+    padding: 0;
+    border-radius: 5px;
+}
