--- a/src/pages/ProjectDashboard/ProjectDashboard.css
+++ b/src/pages/ProjectDashboard/ProjectDashboard.css
@@ -60,7 +60,12 @@
     width: 20px;
 }
 
-.selected-set {
+.selected-req-set {
+    background-color: #a5c0dd;
+    padding: 0;
+    border-radius: 5px;
+}
+.selected-test-set {
     background-color: #a5c0dd;
     padding: 0;
     border-radius: 5px;
@@ -80,4 +85,27 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.testArrow {
+    height: 15px;
+    width: 15px;
+    transform-origin: center center;
+    transition: transform 0.3s ease-in-out;
+}
+
+.testArrow-down {
+    height: 15px;
+    width: 15px;
+    transform: rotate(90deg);
+}
+
+.test-list {
+    overflow: hidden;
+    transition: max-height 0.5s ease-in-out;
+    max-height: 0;
+}
+
+.test-list.open {
+    margin-left: 10px;
+    max-height: fit-content;
 }
