--- a/src/pages/Register-step1/Register.css
+++ b/src/pages/Register-step1/Register.css
@@ -1,15 +1,25 @@
 .register2-container {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center;
+    justify-content: center; */
     width: 100vw;
-    height: 100vh;
-    background-image: url('../../../public/Home.png');
+    /* height: 100vh; */
+    background-color: rgb(255, 255, 255);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
+}
+.head2{
+    color: #063762;
+    text-transform: capitalize;
+    font-weight: 60px;
+}
+.register-form2{
+    border-radius: 10px;
+    margin-left: 180px;
+    margin-top: 30px;
 }
 .input-elements {
     display: flex;
