--- a/src/pages/Register-step2/Register.css
+++ b/src/pages/Register-step2/Register.css
@@ -1,10 +1,10 @@
 .register {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center;
+    justify-content: center; */
     width: 100vw;
-    height: 100vh;
-    background-image: url('../../../public/Home.png');
+    /* height: 100vh; */
+    background-color: rgb(255, 255, 255);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -12,23 +12,45 @@
     padding: 0;
 }
 .register-form {
-    display: flex;
-    flex-direction: column;
-    padding: 50px;
+    border-radius: 10px;
+    margin-left: 150px;
+    margin-top: 50px;
 }
 
 .input-elements {
     display: flex;
     flex-direction: column;
+    width:300px;
+    height: 65px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.head1{
+    color: #063762;
+    text-transform: capitalize;
+    margin-right: 315px;
 }
 .input-elements > label {
+    margin-top: 5px;
+     margin-bottom: 5px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .input-elements > input {
-    border-radius: 10px;
+    border-radius: 4px;
+    border:2px solid #ccc;
+    padding: 8px;
+    width: 100%;
+    height: 35px;
+    outline: none;
+    box-sizing: border-box;
 }
+.input-elements >input:focus{
+    border:2px solid rgb(64, 64, 237);
+    border-radius: 4px;
+}
+
 .register-button {
-    background-color: #4caf50;
+    background-color: rgb(64, 64, 237);
     color: white;
     font-size: 16px;
     border: none;
@@ -38,7 +60,7 @@
     max-width: 50%;
     align-self: center;
     padding: 5px;
-    margin-top: 5px;
+    margin-top: 20px;
 }
 .email {
     padding: 8px;
@@ -66,6 +88,7 @@
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
+    margin-right: 125px;
 }
 .error {
     font-size: 1em;
