--- a/src/pages/Register-step2/Register.css
+++ b/src/pages/Register-step2/Register.css
@@ -1,9 +1,9 @@
 .register {
     display: flex;
-    /* align-items: center;
-    justify-content: center; */
+     align-items: center;
+    justify-content: center; 
     width: 100vw;
-    /* height: 100vh; */
+     height: 100vh; 
     background-color: rgb(255, 255, 255);
     background-position: center;
     background-size: cover;
@@ -12,9 +12,12 @@
     padding: 0;
 }
 .register-form {
+    padding-top: 20px;
+    padding-left: 50px;
     border-radius: 10px;
-    margin-left: 150px;
-    margin-top: 50px;
+    background-color:rgb(247, 247, 247);
+    width: 25vw;
+    height: 48vh;
 }
 
 .input-elements {
@@ -60,7 +63,11 @@
     max-width: 50%;
     align-self: center;
     padding: 5px;
+    margin-left: 52px;
     margin-top: 20px;
+}
+.register-button:hover{
+    background-color: #0a4070;
 }
 .email {
     padding: 8px;
@@ -88,7 +95,7 @@
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
-    margin-right: 125px;
+    margin-right: 70px;
 }
 .error {
     font-size: 1em;
