--- a/src/pages/Usermanagement/UserTable.css
+++ b/src/pages/Usermanagement/UserTable.css
@@ -67,3 +67,12 @@
 .field {
     margin: 10px;
 }
+.user-link {
+    display: inline-block;
+    position: relative;
+    color: #007bff;
+    text-decoration: none;
+}
+.user-link:hover {
+    text-decoration: underline;
+}
