Edited reuirement form and test form

--- a/src/pages/ProjectDashboard/Requirements/RequirementSetFrom.css
+++ b/src/pages/ProjectDashboard/Requirements/RequirementSetFrom.css
@@ -1,3 +1,9 @@
+.req-form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Set the container height to fill the viewport */
+  }
 .requirementSetForm {
     display: flex;
     justify-content: center;
